@@ -2,6 +2,8 @@ Changes in 3.0 alpha3
 =====================
 
 * NEW: afpd: Per volume "login message", NetAFP bug ID #18
+* UPD: unix charset is UTF8 by default
+       vol charset is same value as unix charset by default
 
 Changes in 3.0 alpha2
 =====================
